<!--
  ~ // Copyright (c) Microsoft Corporation.
  ~ // All rights reserved.
  ~ //
  ~ // This code is licensed under the MIT License.
  ~ //
  ~ // Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ // of this software and associated documentation files(the "Software"), to deal
  ~ // in the Software without restriction, including without limitation the rights
  ~ // to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ // copies of the Software, and to permit persons to whom the Software is
  ~ // furnished to do so, subject to the following conditions :
  ~ //
  ~ // The above copyright notice and this permission notice shall be included in
  ~ // all copies or substantial portions of the Software.
  ~ //
  ~ // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ // FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ // AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ // THE SOFTWARE.
  -->

<resources>
    <string name="app_name">MSAL Sample App</string>

    <string name="authority_text">Authority</string>
    <string name="login_hint_text">Login hint</string>
    <string name="prompt_behavior_text">Prompt</string>
    <string name="data_profile_text">Data Profile</string>
    <string name="scope_text">Scope</string>
    <string name="scope_default_text">user.read</string>
    <string name="extra_scope_text">Extra Scopes</string>
    <string name="scope_text_hint">Type in scopes delimited by space</string>
    <string name="extra_query_params_text">Extra Query Params</string>
    <string name="extra_query_params_text_hint">Enter as param1=1234&amp;param2=abc</string>
    <string name="enable_pii_text">Enable PII</string>
    <string name="force_refresh">Force Refresh</string>
    <string name="default_browser">Default Browser</string>
    <string name="public_application_mode">Mode</string>
    <string name="auth_user_agent">User Agent</string>
    <string name="acquire_token_button">AcquireToken</string>
    <string name="acquire_token_silent_button">AcquireToken Silent</string>
    <string name="acquire_token_with_resource_button">AT w/ Resource</string>
    <string name="acquire_token_silent_with_resource_button">ATS w/ Resource</string>
    <string name="result_hint_text">Acquire token interactive/silent flow result data goes here...</string>
    <string name="log_hint_text">Log data goes here...</string>
    <string name="clear_log_button">clear logs</string>
    <string name="copy_log_button">copy logs to clipboard</string>
    <string name="copy_auth_result_button">copy result to clipboard</string>
    <string name="account">Account</string>
    <string name="btn_getUser">Get Users</string>
    <string name="btn_removeUser">Remove User</string>
    <string name="config_file_text">Config File</string>
    <string name="auth_scheme_text">Auth Scheme</string>
    <string name="launch_main_activity_button">Start Task</string>
    <string name="get_active_broker">Get active broker package</string>
    <string name="sign_in_from_other_device">Allow \"Sign in from other device\"?</string>
    <string name="get_preferred_auth_method"> Get Preferred Auth Method</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pop_resource_url_text">PoP Resource URL</string>
    <string name="pop_http_method_text">PoP HTTP Method</string>
    <string name="pop_default_resource_url">https://signedhttprequest.azurewebsites.net/api/validateSHR</string>
    <string name="claims">Claims</string>
    <string name="status">Status:</string>
    <string name="pop_client_claims">PoP client claims</string>
    <string name="trust_debug_broker">DebugBroker?</string>
    <string name="enable_new_broker_discovery">Enable New Broker Discovery</string>
    <string name="clear_active_broker_cache">Clear Active Broker Cache</string>
    <string name="current_cached_active_broker">Cached Active Broker</string>
    <string name="none">None</string>

    <!-- Native Auth Title screens -->
    <string name="title_email_password_sisu">Email &amp; Password</string>
    <string name="title_email_oob_sisu">Email &amp; OTP</string>
    <string name="title_email_attribute_oob_sisu">Custom Attributes</string>
    <string name="title_email_oob_sspr">Password Reset</string>
    <string name="title_more">More</string>
    <string name="title_web_fallback">Web Fallback</string>

    <!-- Native Auth -->
    <string name="sign_in">"Sign In"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="sign_out">"Sign Out"</string>
    <string name="forget_password">"Forget Password"</string>
    <string name="submit_attribute">"Submit"</string>
    <string name="submit_password">"Submit"</string>
    <string name="create">"Create new user"</string>
    <string name="attributes_intro">Attributes are required. Check logs for details.</string>
    <string name="submit_attributes">Submit attributes</string>
    <string name="verify_email">"Send"</string>
    <string name="verify_code">"Next"</string>
    <string name="resend_code_text">"Resend Passcode"</string>

    <string name="sign_in_successful_message">"Sign in successful"</string>
    <string name="sign_up_successful_message">"Sign up successful. Trigger sign in flow."</string>
    <string name="sign_in_switch_to_otp">"Account requires code for sign in"</string>
    <string name="sign_out_successful_message">"Sign out successful"</string>
    <string name="password_reset_success_message">"Password change successful"</string>
    <string name="resend_code_message">"New code sent"</string>

    <!-- Native Auth Errors -->
    <string name="msal_exception_title">MSAL Exception</string>

    <!-- Native Auth Fields -->
    <string name="attribute_email">Email <font color='@android:color/red'>*</font></string>
    <string name="attribute_password">Password <font color='@android:color/red'>*</font></string>
    <string name="attribute_attr1_key">Attribute 1 - Key</string>
    <string name="attribute_attr1_value">Attribute 1 - Value</string>
    <string name="attribute_attr2_key">Attribute 2 - Key</string>
    <string name="attribute_attr2_value">Attribute 2 - Value</string>
    <string name="attribute_given">"Given name"</string>
    <string name="attribute_surname">"Surname"</string>
    <string name="attribute_otp">"Code"</string>

    <!-- Results -->
    <string name="result_access_token_text">"Access token: "</string>
    <string name="result_id_token_text">"ID token: "</string>
    <string name="at_with_qr_pin">AT with QR + PIN</string>
</resources>
