<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ //  Copyright (c) Microsoft Corporation.
  ~ //  All rights reserved.
  ~ //
  ~ //  This code is licensed under the MIT License.
  ~ //
  ~ //  Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ //  of this software and associated documentation files(the "Software"), to deal
  ~ //  in the Software without restriction, including without limitation the rights
  ~ //  to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ //  copies of the Software, and to permit persons to whom the Software is
  ~ //  furnished to do so, subject to the following conditions :
  ~ //
  ~ //  The above copyright notice and this permission notice shall be included in
  ~ //  all copies or substantial portions of the Software.
  ~ //
  ~ //  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ //  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ //  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ //  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ //  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ //  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ //  THE SOFTWARE.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/authority_text"/>

            <Spinner
                android:id="@+id/authorityType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>


        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/environment_text" />

            <Spinner
                android:id="@+id/environment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/ui_behavior_text" />

            <Spinner
                android:id="@+id/uiBehavior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/auth_user_agent"/>

            <Spinner
                android:id="@+id/auth_user_agent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>


        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/login_hint_text" />

            <EditText
                android:id="@+id/loginHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/scope_text" />

            <EditText
                android:id="@+id/scope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/scope_default_text"
                android:layout_weight="7"
                android:hint="@string/scope_text_hint"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/extra_scope_text" />

            <EditText
                android:id="@+id/extraScope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textSize="12sp"
                android:hint="@string/scope_text_hint"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:weightSum="8"
                          android:orientation="horizontal"
                          android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/force_refresh"/>

                <Switch
                    android:id="@+id/forceRefresh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:textOn="on"
                    android:textOff="off"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:weightSum="8"
                          android:orientation="horizontal"
                          android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="5"
                    android:text="@string/enable_pii_text"/>

                <Switch
                    android:id="@+id/enablePII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:textOn="on"
                    android:textOff="off"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/default_browser" />

            <TextView
                android:id="@+id/default_browser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_weight="6"/>
        </LinearLayout>


        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/public_application_mode" />

            <TextView
                android:id="@+id/public_application_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_weight="6"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/select_user" />

            <Spinner
                android:id="@+id/select_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_getUsers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="5"
                android:text="@string/btn_getUser" />

            <Button
                android:id="@+id/btn_clearCache"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="5"
                android:text="@string/btn_removeUser" />

        </LinearLayout>


        <RelativeLayout
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_acquiretoken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acquire_token_button" />

                <Button
                    android:id="@+id/btn_acquiretokensilent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acquire_token_silent_button" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_output"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>